# moon-quote

./: .env  .gitignore  README.md  diesel.toml  implementation.md  index.html  package-lock.json  package.json  postcss.config.cjs  search.html  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: AddContextMenu.svelte  App.svelte  App.tsx  ContextMenuDisplay.svelte  ContextMenuProvider.tsx  Counter.svelte  FileDropHandler.svelte  FileDropHandler.tsx  FileDropSplash.svelte  FileUploadButton.svelte  Library.tsx  Loading.svelte  ResizeHandle.tsx  app.css  backend.ts  contextMenu.ts  contextmenu.ts  decor.ts  deeplink.ts  epubcfi.d.ts  exporters.ts  global.css  iframeResizer.d.ts  index.css  inputGroup.ts  main.ts  main.tsx  resizableWidth.css  resizableWidth.ts  result.ts  settings.ts  templates.ts  toast.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/exporters/: HTML.js  JSON.js  Markdown.js
src-tauri/src/: commands.rs  deeplink.rs  error.rs  local_server.rs  main.rs  server.rs  utils.rs  xslt.rs  xslt_templates.rs
src-tauri/src/commands/: library.rs  mod.rs  open_folder.rs  query.rs  search.rs
src-tauri/src/commands/sql/: insert_book.sql
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/deeplink/: client.rs  commands.rs  message.rs  mod.rs  plugin.rs  server.rs  target.rs  url.rs
src-tauri/src/deeplink/communication/: client.rs  mod.rs  server.rs
src-tauri/src/deeplink/plugin/: commands.rs  mod.rs
src-tauri/src/exporters/: default.rs  get_exporters.rs  get_scripts.rs  mod.rs  plugin.rs
src-tauri/src/migrations/: init.sql
src-tauri/templates/: main.desktop  main.wxs
src-tauri/xslt/: XML.xslt
(+114 files in other folders)
