[package]
name = "moon-quote"
version = "0.1.3"
description = "A Tauri App"
authors = ["snorkysnark"]
license = ""
repository = ""
default-run = "moon-quote"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# tauri-build = { version = "1.0.4", features = [] }
tauri-build = { git = "https://github.com/snorkysnark/tauri", branch = "desktop-file-template", features = [] }

[dependencies]
anyhow = "1.0.62"
paste = "1.0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "1.0.5", features = ["api-all"] }
tauri = { git = "https://github.com/snorkysnark/tauri", branch = "desktop-file-template", features = ["api-all"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
url = "2.3.1"
interprocess = { version = "1.1.1", features = [] }
futures = "0.3.24"
percent-encoding = "2.2.0"

# Bundle openssl for Ubuntu support
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.41", features = ["vendored"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
